# qd_rna

./: .gitignore  .gitmodules  README.md  __init__.py  __main__.py  bart_sample.yaml  config.example.yaml  config.qd_rna.testing_july2025.yaml  environment.yaml  pyproject.toml  qd_rna.py  qdrna_env.yaml  requirements.txt  samples.testing.yaml  schema.yaml
.environments/conda_5ab09f0f/conda-meta/: fq-0.12.0-h9ee0642_0.json
cellophane/: README.md  __init__.py  pyproject.toml
cellophane/src/: cfg.py  data.py  modules.py  util.py
configs/: nextflow.base.config  nextflow.qd_rna.config  qd_rna.base.yaml  qd_rna.manual.yaml  qd_rna.routine.yaml
modules/: common.py  qd_rna.py  qlucore.py  requirements.txt  rnafusion.py  rnaseq.py
modules/compress/: __init__.py  schema.yaml
modules/compress/src/: hooks.py  util.py
modules/grid_engine/src/: executor.py
modules/grid_engine/tests/: integration.yaml
modules/hcp/: __init__.py  schema.yaml
modules/hcp/src/: hooks.py
modules/hcp/tests/: test_hcp.py
modules/mail/: __init__.py  schema.yaml
modules/mail/src/: hooks.py
modules/mail/tests/: integration.yaml
modules/nextflow/: __init__.py
modules/nextflow/scripts/: nextflow.sh
modules/nextflow/src/: mixins.py  run_arriba.sh  (+1 more)
modules/qlucore/: __init__.py  pyproject.toml  schema.yaml
modules/rsync/: __init__.py
modules/slims/: __init__.py  schema.yaml
modules/unpack/: __init__.py
scripts/: arriba_draw_fusions.sh  common_subsample.sh  cram_compress.sh  nextflow.sh  qlucore_subsample.sh  rsync.sh
src/: cfg.py  data.py  logs.py  modules.py  util.py
(+10 files in other folders)
