[tool.poetry]
name = "qd-rna"
version = "0.0.1"
description = "Quick and Dirty RNASeq analysis pipeline"
authors = ["Erik Demitz-Helin <erik.demitz-helin@gu.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ngpiris = "^4.2.0"
slims-python-api = "^6.8.0"
cellophane = {git = "https://github.com/ClinicalGenomicsGBG/cellophane.git", branch = "dev"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
